<resources>
    <string name="app_name">school bus app</string>
    <string name="creditText">MADE BY JAE HAYEON</string>
    <string name="studentText">학생</string>
    <string name="teacherText">선생님</string>
    <string name="chooseText">하나를 선택 해주세요.</string>
    <string name="studentIdHintText">학생 아이디</string>
    <string name="studentPasswordHintText">학생 비밀번호</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuHomeText">홈</string>
    <string name="menuChatText">채팅</string>
    <string name="teacherLoginText">선생님</string>
    <string name="teacherHintText">선생님 아이디</string>
    <string name="teacherPasswordHintText">선생님 비밀번호</string>
    <string name="busRouteText">버스 노선</string>
    <string name="bus1Text">1호차</string>
    <string name="bus2Text">2호차</string>
    <string name="bus3Text">3호차</string>
    <string name="bus4Text">4호차</string>
    <string name="bus5Text">5호차</string>
    <string name="bus6Text">6호차</string>
    <string name="bus7Text">7호차</string>
    <string name="busStartText">버스\n운행시작</string>
    <string name="busStopText">버스 운행중지</string>
</resources>