<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/creditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/creditText"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"/>

    <ImageView
        android:id="@+id/splashSchoolLogo"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:src="@drawable/school_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/studentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="200dp"
        android:text="@string/studentText"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="70dp"
        />

    <ImageView
        android:id="@+id/studentImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/student"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/studentTextView"
        app:layout_constraintEnd_toEndOf="@+id/studentTextView"
        app:layout_constraintTop_toBottomOf="@+id/studentTextView"
        android:contentDescription="studentImageDes"
        android:background="@drawable/intro_round"/>

    <TextView
        android:id="@+id/teacherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="200dp"
        android:text="@string/teacherText"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="50dp"
        />


    <ImageView
        android:id="@+id/teacherImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="10dp"
        android:src="@drawable/teacher"
        app:layout_constraintStart_toStartOf="@+id/teacherTextView"
        app:layout_constraintEnd_toEndOf="@+id/teacherTextView"
        app:layout_constraintTop_toBottomOf="@+id/teacherTextView"
        android:contentDescription="teacherImageDes"
        android:background="@drawable/intro_round"/>

    <TextView
        android:id="@+id/chooseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseText"
        app:layout_constraintStart_toStartOf="@+id/studentImageView"
        app:layout_constraintEnd_toEndOf="@+id/teacherImageView"
        app:layout_constraintTop_toBottomOf="@+id/teacherImageView"
        android:layout_marginTop="15dp"
        android:textSize="22sp"/>




</androidx.constraintlayout.widget.ConstraintLayout>