<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.TeacherLoginActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/creditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/creditText"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"/>

    <ImageView
        android:id="@+id/splashSchoolLogo"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:src="@drawable/school_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/loginStudentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacherLoginText"
        android:textSize="43sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/splashSchoolLogo"
        app:layout_constraintStart_toStartOf="@+id/splashSchoolLogo"
        app:layout_constraintEnd_toEndOf="@+id/splashSchoolLogo"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/studentLoginDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginStudentText"
        app:layout_constraintStart_toStartOf="@+id/loginStudentText"
        app:layout_constraintEnd_toEndOf="@+id/loginStudentText"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/studentLoginTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/studentLoginDateTextView"
        app:layout_constraintStart_toStartOf="@+id/studentLoginDateTextView"
        app:layout_constraintEnd_toEndOf="@+id/studentLoginDateTextView"
        android:textSize="20sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedIdTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="12dp"
        android:hint="@string/teacherHintText"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentLoginTimeTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedPasswordTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        android:hint="@string/teacherPasswordHintText"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedIdTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginStudentButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/outlinedPasswordTextField"
        app:layout_constraintStart_toStartOf="@+id/outlinedPasswordTextField"
        app:layout_constraintEnd_toEndOf="@+id/outlinedPasswordTextField"
        android:layout_marginTop="20dp"
        android:text="로그인"
        android:textSize="20sp"
        app:iconPadding="8dp"
        app:iconSize="30dp"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:iconGravity="textEnd"
        android:backgroundTint="@color/buttonColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>